--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>СalcMachine</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    челеен!
+    <header>калькулятор</header>
+    <div class="telo">
+    <input id="inp1" placeholder="введите количество точек">
+    <button id="btn">вычесление</button>
+    </div>
+    <div class="res" id="res"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
